--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".BottomNavigationActivity"
+            android:name=".Intro.SplashActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,6 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Intro.WelcomeAct"
+            android:theme="@style/SplashTheme2" />
+        <activity android:name=".BottomNavigationActivity"/>
         <activity android:name=".NotificationsActivity" />
         <activity android:name=".ReportActivity" />
         <activity android:name=".PanchayatActivity"></activity>
