--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="in.atria.gov.demo">
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -29,6 +29,9 @@
             android:name=".Intro.WelcomeAct"
             android:theme="@style/SplashTheme2" />
         <activity android:name=".BottomNavigationActivity" />
+        <activity android:name=".PhoneAuthActivity" />
+        <activity android:name=".VerifyPhoneActivity" />
+        <activity android:name=".ProfileActivity" />
         <activity android:name=".NotificationsActivity" />
         <activity android:name=".ReportActivity" />
         <activity android:name=".PanchayatActivity" />
