--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:16.0.1'
     implementation 'com.android.support:design:27.1.1'
 
+    implementation 'com.google.android.gms:play-services-maps:15.0.1'
+
+    implementation 'com.google.android.gms:play-services-places:15.0.1'
+
 }
 
 
